fixed postgres client

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -48,8 +48,8 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.1
-      # - name: Install postgres client
-      #   run: sudo apt-get install libpq-dev
+      - name: Install postgres client
+        run: sudo apt-get install libpq-dev
       - name: Install dependencies
         run: |
           gem install bundler
