--- a/config/database.yml
+++ b/config/database.yml
@@ -61,6 +61,9 @@ development:
 test:
   <<: *default
   database: expense_control_db_test
+  host: <%= ENV["POSTGRES_HOST"] %>
+  username: <%= ENV["POSTGRES_USER"] %>
+  password: <%= ENV["POSTGRES_PASSWORD"] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
