WIP: fixed postgres host

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,7 +36,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: expense_control_db_test
-          POSTGRES_HOST: localhost
+          POSTGRES_HOST: postgres://postgres:postgres@localhost:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
