--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,10 +4,10 @@ on: [push, pull_request]
 env:
   RAILS_ENV: test
   CI: true
-  # POSTGRES_USER: postgres
-  # POSTGRES_PASSWORD: postgres
-  # POSTGRES_DB: expense_control_db_test
-  # POSTGRES_HOST: postgres://postgres:postgres@localhost:5432
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
+  POSTGRES_DB: expense_control_db_test
+  POSTGRES_HOST: postgres://postgres:postgres@localhost:5432
 
 jobs:
   lint:
@@ -35,8 +35,6 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: expense_control_db_test
-          POSTGRES_HOST: postgres://postgres:postgres@localhost:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
