--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,7 +7,7 @@ env:
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
   POSTGRES_DB: expense_control_db_test
-  POSTGRES_HOST: postgres://postgres:postgres@localhost:5432
+  POSTGRES_HOST: localhost
 
 jobs:
   lint:
